# kwinto-xll

./: .gitignore  CMakeLists.txt  README.md  kwinto-xll.cpp  kwinto-xll.h
example/: kwinto-xll.xlsx  server.py
src/: CMakeLists.txt  kwCommon.h  kwUtils.cpp  kwUtils.h  kwXll.cpp
src/framework/: MemoryManager.h  MemoryPool.h  framework.c  framework.h
